--- a/chefapp/templates/base.html
+++ b/chefapp/templates/base.html
@@ -25,8 +25,8 @@
     </nav>
 
     <div class="nav-right">
-      <a href="#" class="btn btn-outline">Login</a>
-      <a href="#" class="btn btn-primary">Book a Chef</a>
+      <a href="{% url 'login' %}" class="btn btn-outline">Login</a>
+      <a href="{% url 'booking' %}" class="btn btn-primary">Book a Chef</a>
     </div>
   </header>  <!-- Navigation Bar -->
 
