--- a/chefapp/templates/chefapp/index.html
+++ b/chefapp/templates/chefapp/index.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title  %}chefke{% endblock  %}
+{% block title  %}Chefke | Landing Page{% endblock  %}
 {% block content %}
 
-{% load static %}
 
   <!-- Hero Section -->
   <section class="hero" style="background: url('{% static 'img/hero1.jpg' %}') no-repeat center center/cover;">
