--- a/chefapp/templates/base.html
+++ b/chefapp/templates/base.html
@@ -17,16 +17,17 @@
     <nav class="nav-center">
       <ul>
         <li><a href="{% url 'index' %}">Home</a></li>
+        <li><a href="{% url 'aboutus' %}">About Us</a></li>
         <li><a href="{% url 'chefs' %}">Our Chefs</a></li>
         <li><a href="{% url 'media' %}">Events</a></li>
-        <li><a href="{% url 'media' %}">Gallery</a></li>
+        <li><a href="{% url 'gallery' %}">Gallery</a></li>
         <li><a href="{% url 'contactus' %}">Contact</a></li>
       </ul>
     </nav>
 
     <div class="nav-right">
-      <a href="#" class="btn btn-outline">Login</a>
-      <a href="#" class="btn btn-primary">Book a Chef</a>
+      <a href="{% url 'login' %}" class="btn btn-outline">Login</a>
+      <a href="{% url 'booking' %}" class="btn btn-primary">Book a Chef</a>
     </div>
   </header>  <!-- Navigation Bar -->
 
@@ -98,6 +99,8 @@
     <p>&copy; 2025 Chefke | Designed & Developed by <strong>Jude Praise</strong></p>
   </div>
   </footer>
-    
+
+<script src="{% static 'js/main.js' %}"></script>
+
 </body>
 </html>
